--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -12,7 +12,10 @@
             <a href="/serials" spa-link>Сериалы</a>
             <a href="/list" spa-link>Избранное</a>
         </div>
-        <div style="display: flex; flex-direction: column">
+        <div style="display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;">
             <div class="search-box">
                 <button class="btn-search"><i class="search-icon"></i></button>
                 <input type="text" class="input-search" placeholder="Поищем?)">
