--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -25,7 +25,8 @@
 }
 
 .header-content__links {
-        display: flex;
+    display: flex;
+    font-size: 18px;
     flex-direction: row;
     gap: 20px;
     padding-left: 30px;
@@ -125,7 +126,7 @@
 }
 
 .btn-search:focus~.input-search {
-    width: 300px;
+    width: 200px;
     border-radius: 0px;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
@@ -133,7 +134,7 @@
 }
 
 .input-search:focus {
-    width: 300px;
+    width: 200px;
     border-radius: 0px;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
