--- a/src/components/notify/notify.css
+++ b/src/components/notify/notify.css
@@ -13,7 +13,7 @@
 }
 
 #toasts {
-    position: absolute;
+    position: sticky;
     bottom: 20px;
     right: 20px;
     width: 100%;
@@ -27,8 +27,8 @@
     display: flex;
     align-items: center;
     padding: 0.5rem 0.75rem;
-    color: rgba(33, 37, 41, 0.75);
-    background-color: rgba(255, 255, 255, 0.85);
+    color: whitesmoke;
+    background-color: var(--dark);
     background-clip: padding-box;
     border-bottom: 1px solid rgba(0, 0, 0, 0.175);
     border-top-left-radius: calc(0.375rem - 1px);
@@ -40,7 +40,7 @@
     width: 1em;
     height: 1em;
     padding: 0.25em 0.25em;
-    color: black;
+    color: white;
     border: 0;
     border-radius: 0.375rem;
     opacity: 1;
@@ -54,16 +54,20 @@
     width: 350px;
     max-width: 100%;
     font-size: 0.875rem;
+    color: white;
     pointer-events: auto;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: dimgray;
+    font-family: Netflix;
     background-clip: padding-box;
-    border: 1px solidrgba(0, 0, 0, 0.175);
+    border: 1px solid rgba(0, 0, 0, 0.175);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     border-radius: 0.375rem;
+    margin-right: 20px;
     animation: show 0.5s ease-in-out;
 }
 
 .toast-body {
     padding: 0.75rem;
+    font-weight: bold;
     word-wrap: break-word;
 }
