--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /*width: 100%;*/
+    width: 100%;
     gap: 10px;
     padding: 2rem;
     align-items: center;
