--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -8,7 +8,7 @@
         <source src="{{film.film.mediaPath}}" type="video/mp4" />
     </video>
     <div class="content-container__advanced-info">
-        <div class="content__like">Добавить в избранное <button class="heart-button">&#x2665;</button></div>
+        <div class="content__like">Добавить в избранное <button class="heart-button"><i class="like"></i></button></div>
         <div class="content-container__advanced-info__meta">
             <div class="content-container__advanced-info__meta-year"><b>Год
                     выхода:</b>
