--- a/src/pages/like/like-item.hbs
+++ b/src/pages/like/like-item.hbs
@@ -9,6 +9,6 @@
         </a>
         <div class="feed-collection__advanced-info__rating" data-rating="{{this.rating}}">{{this.rating}}
         </div>
-        <button class="heart-button" id="{{id}}">&#128148;</button>
+        <button class="heart-button-dislike" id="{{id}}"><i class="dislike"></i></button>
     </div>
 </div>
