--- a/src/pages/serials/serials-feed/serials-content.hbs
+++ b/src/pages/serials/serials-feed/serials-content.hbs
@@ -15,7 +15,7 @@
          <div class="episodeLabel" id="nextEpisode"></div>
     </div>
     <div class="content-container__advanced-info">
-        <div class="content__like">Добавить в избранное <button class="heart-button">&#x2665;</button></div>
+        <div class="content__like">Добавить в избранное <button class="heart-button"><i class="like"></i></button></div>
         <div class="content-container__advanced-info__meta">
             <div class="content-container__advanced-info__meta-year"><b>Год
                     выхода:</b>
