--- a/src/static/icons/netflix.css
+++ b/src/static/icons/netflix.css
@@ -1,5 +1,6 @@
 @import url(./header-icons.css);
 @import url(./search.css);
+@import url(./heart.css);
 @font-face {
   font-family: 'netflix';
   src: url('netflix.woff?g5zjyq') format('woff');
