--- a/src/pages/register/components/register-form.css
+++ b/src/pages/register/components/register-form.css
@@ -31,3 +31,9 @@
 .register-form__description {
     font-weight: bold;
 }
+
+@media screen and (max-width: 900px) {
+    .register-form__title {
+        font-size: 1.5rem;
+    }
+}
