--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -13,7 +13,8 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    overflow: hidden;
+    position: absolute;
+    width: 100vw;
 }
 .main-register-page__container {
     width: 100vw;
@@ -22,3 +23,4 @@ body {
     flex-direction: column;
     display: flex;
 }
+
