--- a/src/static/assets/dropdown.css
+++ b/src/static/assets/dropdown.css
@@ -16,6 +16,7 @@
     display: block;
     margin: 0;
     padding: 0;
+    z-index: 10;
     position: absolute;
     width: 100%;
     box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.3);
@@ -41,6 +42,7 @@
     padding: 0 0 0 10px;
     text-decoration: none;
     line-height: 40px;
+    z-index: 10;
     font-size: 15px;
     font-weight: bold;
     color: white;
