--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -14,6 +14,10 @@
     margin: 0;
 }
 
+.header-content[kind="feed-page"] .header-content__row {
+    width: auto !important;
+}
+
 .header-content__row {
     display: flex;
     flex-direction: row;
@@ -46,11 +50,11 @@
 @media screen and (max-width: 900px) {
 
     .input-search {
-        width: 200px!important;
-        border-radius: 0px!important;
-        background-color: transparent!important;
-        border-bottom: 1px solid rgba(255, 255, 255, .5)!important;
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2)!important;
+        width: 200px !important;
+        border-radius: 0px !important;
+        background-color: transparent !important;
+        border-bottom: 1px solid rgba(255, 255, 255, .5) !important;
+        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2) !important;
     }
 
     .header-content__row {
