--- a/src/pages/login/components/login-background.css
+++ b/src/pages/login/components/login-background.css
@@ -16,7 +16,27 @@
         transform: none;
     }
 
-    .register-form {
-        transform: scale(.7);
+    .input-control {
+        min-width: 0;
+    }
+
+    .login-page__login-content {
+        max-width: 100vw !important;
+    }
+
+    .start-register__form-logo {
+        margin: 0 !important;
+    }
+
+    .start-register__form {
+        margin: 0 !important;
+        max-width: 100vw !important;
+        padding-top: 0 !important;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .login-page__login-background {
+        background: #000 !important;
     }
 }
