--- a/src/pages/content/content.css
+++ b/src/pages/content/content.css
@@ -73,11 +73,8 @@
     background-color: #181818;
     display: flex;
     flex-direction: column;
-    max-width: 70%;
-    width: 70%;
-    margin: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    width: 100%;
+    max-width: calc(100vw - 32px);
     border-radius: 0.25rem;
 }
 
@@ -89,7 +86,7 @@
 
 .content-container__player {
     display: block;
-    width: 100%;
+    width: calc(100vw - 32px);
     margin: auto;
     border: 1px solid #454545;
     border-radius: 0.25rem;
