--- a/src/pages/serials/serials-feed/serial-preview-card.hbs
+++ b/src/pages/serials/serials-feed/serial-preview-card.hbs
@@ -1,9 +1,9 @@
-<div class="feed-collection__container-card" title="{{this.name}}">
-    <video height="200" class="feed-collection__container-card__video" playsinline muted preload="metadata">
+<div class="serial-feed-collection__container-card" title="{{this.name}}">
+    <video height="150" class="feed-collection__container-card__video" playsinline muted preload="metadata">
         <source src="{{this.mediaPath}}#t=150" type='video/mp4'>
     </video>
     <div class="feed-collection__advanced-info">
-        <a href="/{{baseUrl}}/{{this.id}}" class="feed-collection__advanced-info__link" spa-link>
+        <a href="#" class="feed-collection__advanced-info__link" id="{{this.id}}" episode>
             {{this.name}}
         </a>
     </div>
