--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -152,3 +152,115 @@
     border-bottom: 1px solid rgba(255, 255, 255, .5);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
+
+
+.burger-checkbox {
+    position: absolute;
+    visibility: hidden;
+}
+
+.burger {
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    display: inline-block;
+    margin: auto;
+    position: relative;
+    border: none;
+    background: transparent;
+    width: 40px;
+    height: 26px;
+}
+
+.small-menu .burger {
+    margin-bottom: 8px;
+}
+
+.burger::before,
+.burger::after {
+    content: '';
+    left: 0;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 10px;
+    background: #fff;
+}
+
+.burger::before {
+    top: 0;
+    box-shadow: 0 11px 0 #fff;
+    transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
+}
+
+.burger::after {
+    bottom: 0;
+    transition: bottom .3s .15s, transform .3s;
+}
+
+.burger-checkbox:checked+.burger::before {
+    top: 11px;
+    transform: rotate(45deg);
+    box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+    transition: box-shadow .15s, top .3s, transform .3s .15s;
+}
+
+.burger-checkbox:checked~.menu-list {
+    animation: show .3s ease-in-out;
+    opacity: 1;
+    height: auto;
+}
+
+.burger-checkbox:checked+.burger::after {
+    bottom: 11px;
+    transform: rotate(-45deg);
+    transition: bottom .3s, transform .3s .15s;
+}
+
+.menu-list {
+    top: 0;
+    left: 0;
+    opacity: 0;
+    display: grid;
+    gap: 12px;
+    padding: 42px 0;
+    margin: 0;
+    opacity: 0;
+    height: 0;
+    list-style-type: none;
+    transition: .3s;
+}
+
+.menu-item {
+    display: block;
+    padding: 8px;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.menu-item:hover {
+    background: rgba(255, 255, 255, .2)
+}
+
+@media (min-width: 900px) {
+    .large-menu {
+        display: flex !important;
+    }
+
+    .small-menu {
+        display: none !important;
+    }
+}
+
+@media (max-width: 900px) {
+    .large-menu {
+        display: none !important;
+    }
+
+    .small-menu {
+        display: block !important;
+    }
+}
