--- a/src/pages/profile/components/profile-form.hbs
+++ b/src/pages/profile/components/profile-form.hbs
@@ -1,9 +1,9 @@
-<form name="profile-form" class="profile-form">
+<div name="profile-form" class="profile-form">
     <div class="profile-form__row">
         <div class="profile-form__row__avatar">
             <img class="avatar avatar-preview" data-avatar="" src="/img/camera_50.png">
-            {{> partial/input-control/input-control kind="register-page" file=true id="file"
-            name="file" placeholder="Загрузите аватар" type="file"}}
+            {{> partial/input-control/input-control kind="register-page" file=true
+            name="file" placeholder="Загрузите аватар" id="fileInput" type="file"}}
         </div>
         <div class="profile-form__row__form">
             <div>
@@ -13,23 +13,30 @@
             </div>
             <div class="profile-form__row__form_col">
                 <label for="email">Почта</label>
-                {{> partial/input-control/input-control kind="register-page" id="email"
-                default=true
-                placeholder="Почта"
-                autocomplete="email"
-                name="email" type="email"}}
+                <div style="display: flex; flex-direction: row; gap: 10px">
+                    {{> partial/input-control/input-control kind="register-page"
+                    default=true
+                    placeholder="Почта"
+                    autocomplete="email"
+                    id="emailInput"
+                    name="email" type="email"}}
+                    {{> partial/button/button kind="login" label="Сменить почту" id="submitEmail"}}
+                </div>
             </div>
             <div class="profile-form__row__form_col">
                 <label for="password">Пароль</label>
-                {{> partial/input-control/input-control kind="register-page"
-                id="password" default=true
-                placeholder="Пароль"
-                autocomplete="password"
-                name="password" type="password"}}
-            </div>
+                <div style="display: flex; flex-direction: row; gap: 10px">
+                    {{> partial/input-control/input-control kind="register-page"
+                    default=true
+                    placeholder="Пароль"
+                    autocomplete="password"
+                    id="passwordInput"
+                    name="password" type="password"}}
+                    {{> partial/button/button kind="login" label="Сменить пароль" id="submitPassword"}}
+                </div>
 
-            {{> partial/button/button type="submit" kind="login" label="Применить" id="submit"}}
+            </div>
         </div>
     </div>
 
-</form>
+</div>
