--- a/src/pages/main/components/main-content.css
+++ b/src/pages/main/components/main-content.css
@@ -14,15 +14,16 @@
     max-height: 54%;
     position: absolute;
     top: 46%;
-    left: 43%;
+    left: 52%;
     transform: translate(-50%, -50%);
 }
 
 .imac {
-    left: 23%;
+    left: 60%;
     max-height: 47%;
-    max-width: 30%;
+    max-width: 75%;
     top: 34%;
+    overflow: hidden;
 }
 
 .main-content__video-container video {
@@ -142,7 +143,8 @@
     .video-panel {
         display: none;
     }
-    .main-content {
+    
+    .main-content_container {
         transform: scale(.7);
     }
 }
