исправил поведение хедера на страничках

--- a/src/pages/main/components/main-content.css
+++ b/src/pages/main/components/main-content.css
@@ -142,7 +142,7 @@
     .video-panel {
         display: none;
     }
-    .main-content {
+    .main-content_container{
         transform: scale(.7);
     }
 }
