--- a/src/pages/search/search-page.hbs
+++ b/src/pages/search/search-page.hbs
@@ -3,7 +3,7 @@
 <div class="glow-title">{{title}}</div>
 <div class="genre-container" id="cast">
     {{#each cast}}
-    {{> partial/preview-card baseUrl="serial" this=this}}
+    {{> partial/preview-card baseUrl="cast" this=this}}
     {{/each}}
 </div>
 
