--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -4,7 +4,8 @@
 <div class="content-container">
 
     <h1 class="content-container__title">{{film.film.name}}</h1>
-    <video controls controlslist="nodownload noremoteplayback" class="content-container__player" poster="{{film.film.previewPath}}">
+    <video controls controlslist="nodownload noremoteplayback" class="content-container__player"
+        poster="{{film.film.previewPath}}">
         <source src="{{film.film.mediaPath}}" type="video/mp4" />
     </video>
     <div class="content-container__advanced-info">
@@ -15,23 +16,31 @@
                 {{film.film.releaseYear}}</div>
             <div class="content-container__advanced-info__meta-age"><b>Возрастное
                     ограничение:</b> {{film.film.ageRestriction}}+</div>
-            <div class="content-container__advanced-info__meta-rating"><b>Рейтинг:</b>
-                <span id="rating"></span>
-            </div>
+
+
+            <dialog id="dialog">
+                <h2>Hello.</h2>
+                <p>A CSS-only modal based on the <a href="https://developer.mozilla.org/es/docs/Web/CSS/::backdrop"
+                        target="_blank">::backdrop</a> pseudo-class. Hope you find it helpful.</p>
+                <p>You can also change the styles of the <code>::backdrop</code> from the CSS.</p>
+                <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
+            </dialog>
+
             <div class="content-container__advanced-info__meta-time"><b>Длительность:</b>
                 <span id="duration"></span>
             </div>
+            <button class="primary__modal" onclick="window.dialog.showModal();"><b>Рейтинг:</b>
+                <span id="rating"></span></button>
         </div>
         <div class="content-container__advanced-info__about">
             <div class="content-container__advanced-info__description">
                 {{film.film.description}}
             </div>
-
-            <div class="content-container__advanced-info__genres">
+            <div class="serial-content-container__advanced-info__cast">
                 <div class="content-container__advanced-info__genres-title">
                     <b>Актеры</b>
                 </div>
-                <div class="content-container__advanced-info__genres-list">
+                <div class="serial-content-container__advanced-info__cast-list">
                     {{#each film.artists}}
                     <a class="content-container__advanced-info__genres-link" href="/cast/{{this.id}}"
                         spa-link>{{this.name}}
