--- a/src/partial/footer/partial-footer.css
+++ b/src/partial/footer/partial-footer.css
@@ -20,12 +20,12 @@
 }
 
 .footer__container {
-    width: 100%;
+    /* width: 100%;
     max-width: 1000px;
     padding-right: 0.75rem;
     padding-left: 0.75rem;
     margin-right: auto;
-    margin-left: auto;
+    margin-left: auto;*/
 }
 
 .footer__fonts {
@@ -37,18 +37,16 @@
 .footer__row {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 3rem;
+
     max-width: 100%;
-    padding-bottom: 3rem;
+    padding: 3rem;
     margin-top: 0;
-    margin-right: -0.75rem;
-    margin-left: -0.75rem;
 }
 
 .footer__row>* {
     flex-shrink: 0;
     width: 100%;
-    max-width: 100%;
+    max-width: 100vw;
     padding-right: 0.75rem;
     padding-left: 0.75rem;
     margin-top: 0;
