--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -5,8 +5,7 @@
 /*Dialog Styles*/
 dialog {
     padding: 1rem 3rem;
-    background: white;
-    max-width: 400px;
+    background: black;
     padding-top: 2rem;
     border-radius: 20px;
     border: 0;
