--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     gap: 10px;
     padding: 2rem;
     align-items: center;
@@ -260,6 +260,10 @@
 
 @media (max-width: 900px) {
     .large-menu_el {
+        display: none !important;
+    }
+
+    .large-menu {
         display: none !important;
     }
 
